# nekorpc-libraries

./: CMakeLists.txt  README.md
SettingReader/: SettingReader.cpp  SettingReader.h
nstring/: webstring.cpp  webstring.h
tests/: CMakeLists.txt
tests/SettingReader/: SettingReader_test.cpp
